# database

./: README.md  Todo.md  changePhrase.sh
MyNotes/: README.md  docker.md
MyNotes/docker/: README.md  info.md
MyNotes/dockertasks/: README.md
MyNotes/dockertasks/C++ and FTXUI/cpp-ftxui/: CMakeLists.txt  Dockerfile  main.cpp
MyNotes/dockertasks/CPP+FLTK/cpp-fltk/: CMakeLists.txt  Dockerfile  main.cpp
MyNotes/dockertasks/Dockerfile. Wow/ftxui-wow/: CMakeLists.txt  Dockerfile  main.cpp
MyNotes/pipelines/: README.md
MyNotes/scripts/: Sync-GitRepos.bat  Sync-GitRepos.ps1  Sync-GitRepos.sh  readme.md
content/: Markdown.md  temp.md
content/Bash/: BashCLI.md  README.md  main.sh
content/Basics_database_design/: README.md  Todo.md  db_base.md  questions.md
content/DevOps/: CI_CD.md  DevOps.md  README.md
content/Docker/: AltInDocker.md  Codespace.md  Docker.md  DockerCompose.md  DockerHub.md  DockerImageLifecycle.md  DockerImages.md  DockerReminder.md  Dockerfile&DockerCompose.md  Metasploitable2.md  Network.md  PostgreSQL_pgAdmin.md  PostgresSQL.md  Productiom.md  Prune.md  README.md  ThatIsDocker.md  Todo.md  drawDB.md  getDocker.md  joomla.md  mySQLphpMyAdmin.md  stopDown.md
content/Ensuring_quality_computer_systems_functioning/: README.md  Todo.md  WindowsEventLog.md  questions.md  systemdANDJournal.md
content/Git/: Pull_Request.md  README.md
content/IT/: README.md  questions.md
content/Linux/: README.md
content/Mermaid/: README.md
content/SoftwareDevelopmentTools/: README.md  questions.md
content/StudentPracticalsLabs/: CreatingPortf.md  DockerHistory.md  DocsGitMarkdown.md  Mermaid.md  (+11 more)
(+149 files in other folders)
